--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/cristidrg/Google-Keep-React#readme",
   "dependencies": {
+    "classnames": "^2.2.5",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "prop-types": "^15.6.0"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
