--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "svg-inline-loader": "^0.8.0",
-    "webpack": "^3.9.0",
+    "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.5"
   }
 }
