Set Up Redux Store

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "react/prefer-stateless-function": "off",
     "import/extensions": "off",
     "react/no-danger": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "import/no-named-as-default": "off"
   }
 }
