--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,9 @@
     "no-else-return": "off",
     "linebreak-style": "off", // change this after the holidays
     "jsx-a11y/no-static-element-interactions": "off",
+    "no-multi-assign": "off",
+    "one-var": "off",
+    "one-var-declaration-per-line": "off",
+    "prefer-destructuring": "off",
   }
 }
