--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "reselect": "^3.0.1",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
