Added routing functionality

--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   "homepage": "https://github.com/cristidrg/Google-Keep-React#readme",
   "dependencies": {
     "classnames": "^2.2.5",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-first-router": "0.0.16-next",
+    "redux-first-router-link": "^1.4.2",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "shortid": "^2.2.8"
   },
@@ -49,6 +53,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "svg-inline-loader": "^0.8.0",
