--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keep-clone",
+  "name": "keep-react",
   "version": "1.0.0",
   "description": "A Google Keep clone built in the React ecosystem",
   "main": "index.js",
@@ -7,7 +7,9 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha-webpack --recursive --watch",
+    "test-ci": "mocha-webpack --recursive",
+    "test-coverage": "nyc mocha-webpack --recursive --timeout=3000"
   },
   "repository": {
     "type": "git",
@@ -42,6 +44,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -49,12 +52,16 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "mocha": "^5.0.0",
+    "mocha-webpack": "^1.0.1",
     "node-sass": "^4.7.2",
+    "nyc": "^11.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
+    "sinon": "^4.2.2",
     "style-loader": "^0.19.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^3.10.0",
